# tigl-conda

./: .travis.yml  README.md  appveyor.yml  build-docker.md  build_recipes.py  conda_build_config.yaml
.github/workflows/: build-conda-packages.yml
cmake/: bld.bat  build.sh  meta.yaml
cpacscreator/: bld.bat  build.sh  meta.yaml
curl/: bld.bat  build.sh  fixmemcpy.patch  meta.yaml
curl-static/: meta.yaml
doxygen/: bld.bat  meta.yaml
freeimage/: CMakeLists.txt  FreeImageConfig-static.h  Imath_dynamic_exceptions.patch  LibRawLite-autoptr.patch  Makefile.osx  bld.bat  fix_libraw_0_20.patch  installlinux.patch  meta.yaml
freeimage-static/: FreeImageConfig-dynamic.h  bld.bat  build.sh  fix_beta.patch  fix_libraw_0_21.patch  libtiff44.patch  meta.yaml
freeimage-static/cmake/: FindLibRaw.cmake  FindWebP.cmake
freeimage-static/patches/: Use-system-libs.patch
freeimage/cmake/: FindJXR.cmake
freeimage/patches/: freeimage-openexr3.patch  remove_auto_ptr.patch
freeimageplus-static/: Imath_dynamic_exceptions.patch  OpenEXR-C++17.patch  bld.bat  build.sh  fix-fp_h-not-found.patch  fix-macos-macros.patch  meta.yaml
freetype/: bld.bat  build.sh  meta.yaml  zconf.patch
freetype-static/: build.sh  meta.yaml
gl2ps/: bld.bat  build.sh  meta.yaml
libxml2/: bld.bat  build.sh  meta.yaml
libxml2-static/: bld.bat  build.sh  meta.yaml
libxslt/: bld.bat  build.sh  fix_build_vc.patch  fixmemcpy.patch  meta.yaml
libxslt-static/: bld.bat  build.sh  meta.yaml
matlab-libs/: meta.yaml
ninja/: meta.yaml
oce/: bld.bat  build.sh  meta.yaml
oce-0.16/: bld.bat  build.sh  meta.yaml  oce-fix-msvc2015.patch  oce-nullrefs-fix.patch
oce-0.17/: bld.bat  build.sh  fix_private_linking.patch  fixmemcpy.patch  meta.yaml  remove-system-libs.py  vtk.patch  vtk63.patch
oce-static/: bld.bat  build.sh  meta.yaml
opencascade/: CMakeLists.txt  bld.bat  build.sh  fix-private-linking.patch  meta.yaml  no-xmu.patch
opencascade-static/: bld.bat  build.sh  fix-invalid-conversion.patch  meta.yaml
python-occ/: bld.bat  build.sh  fixwindows.patch  fixwindows.patch_unix  meta.yaml
python-occ-7x/: 0001-DLR-patch-to-support-c2-continous-coons-patches.patch  bld.bat  build.sh  meta.yaml
python-occ_0.17/: build.sh  fixmemcpy.patch  jupyter-renderer-unix.patch  jupyter-renderer.patch  link_python.patch  meta.yaml  pyocc_coons_c2.patch
pythreejs/: meta.yaml  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh
swig/: meta.yaml
swig2/: meta.yaml
swig3/: bld.bat  meta.yaml
swig4/: meta.yaml
tbb/: 1byte-2008-intrinsics.patch  bld.bat  build.sh  fixlinuxbuild.patch  installdir.patch  meta.yaml
tigl/: bld.bat  build.sh  fix-exports.patch  fixmemcpy.patch  fixosxload.py  meta.yaml
tigl-static/: bld.bat  build.sh  fixmemcpy.patch  fixrpath.patch  meta.yaml
tigl3/: bindings.patch  bld.bat  build-fixes.patch  build.sh  conda-prefix.patch  conda_build_config.yaml  fix_build_py39.patch  fixosxload.py  meta.yaml
tigl3/boost-patch/: CMakeLists.txt
tixi/: bld.bat  build.sh  disabled-fortran-example.patch  fixmemcpy.patch  fixpaths.py  meta.yaml  private_linking.patch
tixi3/: bld.bat  build.sh  disable-fortran.patch  fixmemcpy.patch  meta.yaml
